--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Mini App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="icon" href="./favicon.ico">
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script> <!-- Новый путь -->
+    <script type="module" src="./assets/index.js"></script>
 </body>
 </html>
