--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="/frontend/src/main.js"></script>
+    <script type="module">
+        import { createApp } from 'vue';
+        import App from './App.vue';
+        createApp(App).mount('#app');
+    </script>
 </body>
 </html>
