--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <div id="app"></div>
     <script type="module">
         import { createApp } from 'vue';
-        import App from './App.vue';
+        import App from '/frontend/src/App.vue';
         createApp(App).mount('#app');
     </script>
 </body>
