57 create default project

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Mini App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="icon" href="favicon.ico">
-</head>
-<body>
+  </head>
+  <body>
     <div id="app"></div>
-    <script type="module" src="/assets/main.js"></script>
-</body>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
