--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telegram Mini App</title>
+  <title>YANDA SHOP</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <link rel="icon" href="favicon.ico">
 </head>
