--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YANDA Shop</title>
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="./public/favicon.ico">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
